Fix editor collapse only collapsing the editor toolbar instead of all elements in the editor except the title.

--- a/examples/Sandbox/scss/_editor.scss
+++ b/examples/Sandbox/scss/_editor.scss
@@ -8,7 +8,7 @@
 			margin-bottom: 1rem;
 		}
 	}
-	&--collapsed &__title + * {
+	&--collapsed &__title ~ * {
 		display: none;
 	}
 	&__title {
